# BicycleModel

./: CMakeLists.txt
include/: VDynamics.h
src/: VDynamics.cpp  main.cpp
